--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pymorphy2
-nltk
+pymorphy2==0.8
+nltk>=3.8.1
 scikit-learn
 pandas
 matplotlib
-flask 
+flask
+pymorphy2-dicts-ru>=2.4.404381.4453942
+setuptools 
