--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-pymorphy2==0.8
+# Основные зависимости
 nltk>=3.8.1
-scikit-learn
-pandas
-matplotlib
-flask
+scikit-learn>=1.0.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+flask>=2.0.0
+pymorphy2==0.8
 pymorphy2-dicts-ru>=2.4.404381.4453942
-setuptools 
+
+# Научные вычисления
+numpy>=1.21.0
+scipy>=1.7.0
+
+# Тестирование
+pytest>=7.0.0
+pytest-cov>=2.12.0
+
+# Утилиты
+setuptools>=57.0.0
+wheel>=0.37.0 
