--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # Основные зависимости
-nltk>=3.8.1
-scikit-learn>=1.0.0
-pandas>=1.3.0
-matplotlib>=3.4.0
+nltk==3.8.1
+scikit-learn==1.3.0
+pandas==2.0.3
+matplotlib==3.7.2
 flask>=2.0.0
-pymorphy2==0.8
+pymorphy2==0.9.1
 pymorphy2-dicts-ru>=2.4.404381.4453942
 
 # Научные вычисления
@@ -17,4 +17,9 @@ pytest-cov>=2.12.0
 
 # Утилиты
 setuptools>=57.0.0
-wheel>=0.37.0 
+wheel>=0.37.0
+
+# Добавляем новые зависимости
+transformers==4.30.2
+sentence-transformers==2.2.2
+torch==2.0.1 
