--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Основные зависимости
 nltk==3.8.1
-scikit-learn==1.3.0
-pandas==2.0.3
+scikit-learn==1.4.1.post1
+pandas==2.2.1
 matplotlib==3.7.2
-flask>=2.0.0
+flask==3.0.2
 pymorphy2==0.9.1
 pymorphy2-dicts-ru>=2.4.404381.4453942
 
 # Научные вычисления
-numpy>=1.21.0
+numpy==1.26.4
 scipy>=1.7.0
 
 # Тестирование
@@ -20,6 +20,6 @@ setuptools>=57.0.0
 wheel>=0.37.0
 
 # Добавляем новые зависимости
-transformers==4.30.2
+transformers==4.38.2
 sentence-transformers==2.2.2
-torch==2.0.1 
+torch==2.2.1 
